<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/fictureIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:contentDescription="@string/ficture"
            android:padding="10dp"
            android:src="@android:drawable/ic_menu_share"
            android:tint="@color/grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/fictureIcon"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txvPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/post_text"
                android:textColor="@color/black"
                android:textSize="@dimen/post_size" />

            <TextView
                android:id="@+id/txvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/time_text"
                android:textColor="@color/grey"
                android:textSize="@dimen/post_time_size" />
        </LinearLayout>

        <ImageView
            android:id="@+id/options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:contentDescription="@string/ficture"
            android:padding="10dp"
            android:src="@android:drawable/ic_menu_send"
            android:tint="@color/grey" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/bright_grey" />
    </RelativeLayout>


</androidx.cardview.widget.CardView>